--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,8 +689,8 @@
     }
    ],
    "source": [
-    "consulta = 'mejores cafes ecológicos'\n",
-    "consulta_a_palabras_relevantes(consulta=consulta, guardar_archivos=True, id_consulta='cafeEcologico')"
+    "consulta = 'mejores bizcochos al microondas'\n",
+    "consulta_a_palabras_relevantes(consulta=consulta, id_consulta='cafeina')"
    ]
   }
  ],
