--- a/example.ipynb
+++ b/example.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -676,21 +676,36 @@
      "text": [
       "0.- Realizando la consulta y obteniendo links\n",
       "1.- Aceptando cookies y extrayendo html\n",
-      "Elemento con xpath://*[contains(text(),'Acept')], encontrado y clicado para url https://www.aromasdete.com/cafes-ecologicos\n",
-      "Elemento con xpath://*[contains(text(),'Acept')], encontrado y clicado para url https://www.cafesilvestre.com/producto/tunki-cafe-ecologico-1-kg-100-ecologico-cafe-organico-de-peru/\n",
-      "Botón de cookies no encontrada para la url https://www.aromasdecafe.es/collections/cafes-ecologicos\n",
-      "Elemento con xpath://*[contains(text(),'Acept')], encontrado y clicado para url https://www.espacioorganico.com/cafe-ecologico-200434\n",
-      "Botón de cookies no encontrada para la url https://eco.terrke.com/mejores-marcas-de-cafe-sostenible/\n",
-      "Botón de cookies no encontrada para la url https://www.conasi.eu/blog/consejos-de-salud/tipos-cafe/\n",
-      "Botón de cookies no encontrada para la url https://www.malongo.com/boutique/es/15-cafes-ecologicos-yo-justos\n",
-      "Botón de cookies no encontrada para la url https://www.homegrounds.co/es/best-organic-coffee/\n",
-      "Botón de cookies no encontrada para la url https://www.cafesiboney.com/tienda/categoria/comprar-cafe-especialidad/cafes-ecologicos/\n"
+      "Elemento con xpath://*[contains(text(),'Acept')], encontrado y clicado para url https://www.fotogramas.es/noticias-cine/g14359218/las-50-mejores-peliculas-de-superheroes-segun-los-usuarios-de-imdb/\n",
+      "Botón de cookies no encontrada para la url https://www.imdb.com/list/ls050750466/\n",
+      "Botón de cookies no encontrada para la url https://www.filmaffinity.com/es/ranking.php?rn=ranking_superheroes\n",
+      "Elemento con xpath://*[contains(text(),'Acept')], encontrado y clicado para url https://as.com/meristation/noticias/las-35-mejores-peliculas-de-superheroes-de-la-historia-marvel-dc-y-mas-de-un-invitado-sorpresa-n/\n",
+      "Botón de cookies no encontrada para la url https://es.rollingstone.com/las-mejores-25-peliculas-de-superheroes-arg/\n",
+      "Botón de cookies no encontrada para la url https://global.techradar.com/es-es/best/las-25-mejores-peliculas-de-superheroes-de-todos-los-tiempos\n",
+      "Botón de cookies no encontrada para la url https://depor.com/depor-play/pantalla/cuales-son-las-mejores-peliculas-de-superheroes-10-cintas-que-lideran-el-ranking-de-imdb-nnda-nnlt-noticia/\n",
+      "Botón de cookies no encontrada para la url https://vandal.elespanol.com/reportaje/random-las-15-mejores-peliculas-de-superheroes-de-todos-los-tiempos-\n",
+      "Botón de cookies no encontrada para la url https://www.mundodeportivo.com/alfabeta/cine/las-mejores-peliculas-de-superheroes-de-la-historia\n",
+      "2.- Extrayendo texto limpio del html\n",
+      "3.- Creando la matriz tfidf\n",
+      "4.- Obteniendo palabras más relevantes\n",
+      "Las 10 palabras relevantes son:\n",
+      " años batman caballero chris christopher cine clic director disney historia\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'años batman caballero chris christopher cine clic director disney historia'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "consulta = 'mejores bizcochos al microondas'\n",
-    "consulta_a_palabras_relevantes(consulta=consulta, id_consulta='cafeina')"
+    "consulta = 'mejores películas de superhéores'\n",
+    "consulta_a_palabras_relevantes(consulta=consulta, id_consulta='pelisSuperheores', guardar_archivos=True)"
    ]
   }
  ],
